# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
gendiff/: diff_with_formatter.py
gendiff/scripts/: gendiff.py
