[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dimon0476"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.1.0"
PyYAML = "^6.0.1"
pytest = "^7.4.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
PyYAML = "^6.0.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
